-Scrollbar fixes -Grid event card height and padding fix on big screens -Fix on blurry background image -Fixed too close list cards

--- a/assets/scss/tailwind.scss
+++ b/assets/scss/tailwind.scss
@@ -133,7 +133,7 @@
   font-display: fallback;
 }
 
-#__nuxt {
+body {
   overflow-x: hidden;
 }
 
